# OmniCli

./: .gitattributes  .gitignore  Cargo.toml  PROJECT_SUMMARY.md  README.md
.github/workflows/: ci.yml  release.yml
.kilo/plans/: 1784032773920-global-cli-improvements.md
docs/: README.md  architecture.md  commands.md  context.md  decisions.md  design.md  journal.md  keybindings.md  providers.md  todo.md  why-omni.md
examples/: artifacts.yml  inspect.yml  supervisor.yml
examples/plugins/datetime/: datetime_plugin.py  omni-plugin.toml
src/: agent.rs  config.rs  context.rs  diffview.rs  events.rs  lib.rs  lsp.rs  main.rs  mcp.rs  permission.rs  plugin.rs  protocol.rs  provider.rs  repomap.rs  routing.rs  schema.rs  search.rs  store.rs  supervisor.rs  theme.rs  tools.rs  tui.rs  tui_banner.rs  tui_markdown.rs  tui_palette.rs  workflow.rs  worktree.rs
tests/: cli_e2e.rs
